feat(admin): enhance permissions handling in AdminPanel and Header components